<resources>
    <string name="app_name">Socializer</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">home page</string>
    <string name="friends">Friends</string>
    <string name="notifications">Notifications</string>
    <string name="profile">profile</string>
    <string name="friend">friend</string>
    <string name="comments">Post</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="share_your_status">Share your status</string>
    <string name="thump_up">Up vote</string>
    <string name="thump_down">Down vote</string>
    <string name="comment">Comment</string>
    <string name="repost">Repost</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="write_a_comment">write a comment</string>
    <string name="send_button">send button</string>
    <string name="name">Name</string>
    <string name="gender">Gender:</string>
    <string name="birth_date">BirthDate:</string>
    <string name="profile_pic">profile pic</string>
    <string name="edit">Edit</string>
    <string name="notification_constant_message">" on your post"</string>
    <string name="connecting">Connecting…
    </string>
    <string name="connected">Connected</string>
    <string name="title_activity_edit_info">editInfo</string>
    <string name="change">change</string>
    <string name="profile_image">profile Image</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <!--fragments names -->
    <string name="home_frag">Home</string>
    <string name="notification_frag">Notifications</string>
    <string name="friendReq_frag">Requests</string>
    <string name="manage">Manage</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="ex_programmers4fun_gmail_com">ex: programmers4Fun@gmail.com</string>
    <string name="ex_11_11_1997">ex: 11/11/1997</string>
    <string name="requests">Requests:</string>
    <string name="socializer">Socializer</string>
    <string name="search_for_friends">search for friends</string>
</resources>
