<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".View.MainActivity.Authentication.LoginFragment" android:background="@color/colorPrimaryBackground">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:padding="15dp"
                  android:orientation="vertical" tools:ignore="UselessParent" android:id="@+id/linearLayout4">
        <EditText
                style="@style/TextFields"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email_editText"
                android:hint="@string/email" android:layout_weight="1"
                android:layout_height="0dp"/>
        <EditText
                style="@style/TextFields"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password_editText"
                android:hint="@string/password"
                android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
    </LinearLayout>
    <Button
            style="@style/black_button"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/linearLayout4" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/socializer"
            android:padding="15dp"
            android:textSize="60sp"
            android:layout_above="@+id/linearLayout4" android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"/>

</RelativeLayout>
