<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="40dp"
            tools:context="com.example.kemo.socializer.View.MainActivity.Authentication.RegisterFragment">
<LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="match_parent">



    <LinearLayout
           style="@style/register_page_linearLayout_vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" android:layout_gravity="center_horizontal"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/register_name_editText" />
    </LinearLayout>
    <LinearLayout
            style="@style/register_page_linearLayout_vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_gravity="center_horizontal"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/register_mail_editText" />
    </LinearLayout>
    <LinearLayout
            style="@style/register_page_linearLayout_vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" android:layout_gravity="center_horizontal"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/register_password_editText" />
    </LinearLayout>
    <LinearLayout
            style="@style/register_page_linearLayout_vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_date" android:layout_gravity="center_horizontal"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:focusable="false"
                android:id="@+id/register_birthDate_editText" />
    </LinearLayout>
    <Button
            style="@style/black_button"
            android:text="@string/register"
            android:id="@+id/register_register_button" android:layout_gravity="center_horizontal"/>

</LinearLayout>
</ScrollView>