<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:showIn="@layout/activity_comments"
                tools:context=".View.CommentsActivity.CommentsActivityFragment">

<ListView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/comments_listView"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
            android:background="#fff"
            android:layout_alignParentStart="true">
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="90dp"
                android:layout_weight="0.80"
                android:hint="@string/write_a_comment"
                android:id="@+id/commentWriter_EditText"/>
        <RelativeLayout android:layout_width="0dp" android:layout_height="match_parent"  android:layout_weight="0.20">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:src="@drawable/send_button"
                    android:layout_centerVertical="true" android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/send_button" android:contentDescription="@string/send_button"/>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
